[project]
name = "dev_utils"
version = "0.0.7"
dynamic = ["dependencies"]

[project.scripts]
config = "dev_utils.src.config:print_envs"
#main = "dev_utils.src.main:main"
bump-ver = "dev_utils.src.utils.version:app"
init-gen = "dev_utils.src.utils.python.init_gen:app"
tmux-script = "dev_utils.src.utils.tmux.script:script"
get-buffers = "dev_utils.src.utils.nvim.buffers:main"
tmux-vars = "dev_utils.src.utils.nvim.nvim_init:print_tmux_envvars"
buffer-select = "dev_utils.src.utils.nvim.select_buffers:app"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }
